@@ -33,12 +33,15 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.Writer;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+
+import javax.ws.rs.core.UriBuilder;
 
 import org.apache.commons.lang.StringUtils;
 import org.apache.http.client.config.RequestConfig;
@@ -49,9 +52,11 @@ import org.apache.http.impl.client.HttpClientBuilder;
 import org.goobi.beans.Process;
 
 import de.sub.goobi.config.ConfigurationHelper;
+import de.sub.goobi.forms.HelperForm;
 import de.sub.goobi.helper.HttpClientHelper;
 import de.sub.goobi.helper.NIOFileUtils;
 import de.sub.goobi.helper.StorageProvider;
+import de.sub.goobi.helper.exceptions.SwapException;
 import de.sub.goobi.metadaten.MetadatenHelper;
 import de.sub.goobi.metadaten.MetadatenVerifizierung;
 import lombok.Getter;
@@ -109,7 +114,6 @@ public class CreatePdfFromServletThread extends LongRunningTask {
              * define path for mets and pdfs
              * --------------------------------*/
             URL goobiContentServerUrl = null;
-            String contentServerUrl = ConfigurationHelper.getInstance().getGoobiContentServerUrl();
             Path tempPdf = StorageProvider.getInstance().createTemporaryFile(this.getProzess().getTitel(), ".pdf");
             Path finalPdf = Paths.get(this.targetFolder.toString(), this.getProzess().getTitel() + ".pdf");
             Integer contentServerTimeOut = ConfigurationHelper.getInstance().getGoobiContentServerTimeOut();
@@ -133,38 +137,32 @@ public class CreatePdfFromServletThread extends LongRunningTask {
              * --------------------------------*/
 
             if (new MetadatenVerifizierung().validate(this.getProzess()) && this.metsURL != null) {
-                /* if no contentserverurl defined use internal goobiContentServerServlet */
-                if (contentServerUrl == null || contentServerUrl.length() == 0) {
-                    contentServerUrl = this.internalServletPath + "/gcs/gcs?action=pdf&metsFile=";
-                }
-                goobiContentServerUrl = new URL(contentServerUrl + this.metsURL + imageSource + pdfSource + altoSource);
-
+                
+                goobiContentServerUrl = UriBuilder.fromUri(new HelperForm().getServletPathWithHostAsUrl())
+                        .path("api").path("process").path("pdf").path(Integer.toString(this.getProzess().getId()))
+                        .path(this.getProzess().getTitel()+ ".pdf")
+                        .queryParam("metsFile", this.metsURL)
+                        .queryParam("imageSource", getImagePath().toUri())
+                        .queryParam("pdfSource", getPdfPath().toUri())
+                        .queryParam("altoSource", getAltoPath().toUri())
+                        .build().toURL();
+                
                 /* --------------------------------
                  * mets data does not exist or is invalid
                  * --------------------------------*/
 
             } else {
-                if (contentServerUrl == null || contentServerUrl.length() == 0) {
-                    contentServerUrl = this.internalServletPath + "/cs/cs?action=pdf&images=";
-                }
-                String url = "";
-
-                List<Path> meta =
-                        StorageProvider.getInstance().listFiles(this.getProzess().getImagesTifDirectory(true), NIOFileUtils.imageNameFilter);
-                ArrayList<String> filenames = new ArrayList<>();
-                for (Path data : meta) {
-                    String file = "";
-                    file += data.toUri().toURL();
-                    filenames.add(file);
-                }
-                Collections.sort(filenames, new MetadatenHelper(null, null));
-                for (String f : filenames) {
-                    url = url + f + "$";
-                }
-                String imageString = url.substring(0, url.length() - 1);
-                String targetFileName = "&targetFileName=" + this.getProzess().getTitel() + ".pdf";
-                goobiContentServerUrl = new URL(contentServerUrl + imageString + imageSource + pdfSource + altoSource + targetFileName);
-            }
+                goobiContentServerUrl = UriBuilder.fromUri(new HelperForm().getServletPathWithHostAsUrl())
+                        .path("api").path("process").path("image")
+                        .path(Integer.toString(getProzess().getId()))
+                        .path("media")        //dummy, replaced by images query param
+                        .path("00000001.tif") //dummy, replaced by images query param
+                        .path(getProzess().getTitel()+ ".pdf")
+                        .queryParam("imageSource", getImagePath().toUri())
+                        .queryParam("pdfSource", getPdfPath().toUri())
+                        .queryParam("altoSource", getAltoPath().toUri())
+                        .queryParam("images", createImagesParameter(getProzess()))
+                        .build().toURL();           }
 
             /* --------------------------------
              * get pdf from servlet and forward response to file
@@ -245,4 +243,21 @@ public class CreatePdfFromServletThread extends LongRunningTask {
         setStatusProgress(100);
     }
 
+    private String createImagesParameter(Process myProzess) throws IOException, SwapException, MalformedURLException {
+        StringBuilder images = new StringBuilder();
+        List<Path> meta = StorageProvider.getInstance().listFiles(myProzess.getImagesTifDirectory(true), NIOFileUtils.imageNameFilter);
+        ArrayList<String> filenames = new ArrayList<>();
+        for (Path data : meta) {
+            String file = "";
+            file += data.toUri().toURL();
+            filenames.add(file);
+        }
+        Collections.sort(filenames, new MetadatenHelper(null, null));
+        for (String f : filenames) {
+            images.append(f).append("$");
+        }
+        images = images.deleteCharAt(images.length()-1);
+        return images.toString();
+    }
+    
 }
